deployment/admin-gateway/overlays/preview/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: admin-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: admin-gateway
    spec:
      containers:
        - name: admin-gateway
          image: ghcr.io/teck-lab/teck-cloud/web-admin-gateway:preview
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
