deployment/admin-gateway/overlays/preview/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: admin-gateway
spec:
  parentRefs:
    - name: external-gateway
      namespace: kgateway-system
  hostnames:
    - api.tecklab.dk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - kind: Service
          name: admin-gateway
          port: 80
